Version 1.3-svn:
 * campaigns
   * Heir to the Throne
     * removed Mountain Pass and Valley of Statues from the repository
     * added underpinnings of a unlockable, optional, bonus scenario
 * multiplayer maps:
   * new multiplayer maps: The Manzivan Traps
   * revised multiplayer maps: Sablestone Delta
 * units:
   * balancing changes:
     * decreased cost of the Mudcrawler from 9 to 5
     * removed Necrophage from random_leader
   * new units
     * added the Armagedon Drake, it is not used in any mainline eras
   * unit Art
     * added a recruit animation to the skeleton
 * user interface
   * add save map items in menu to save in game map
   * add turbo speed setting and change ui according to
   * turn bell moved to sound tab in prefereces
   * new slider - bell volume
   * disable inactive sliders instead of hiding them
   * sliders can be adjusted with keyboard left and right
   * sidebar reports related to gold, units, villages and time get greyed out
     during other team's turns
   * improve the tiny gui support (resolution of 320x240 pixels)
   * changed the hotkey for 'end turn' from 'alt+space' to 'ctrl/cmd+space'
     because it interferes with several common window managers
   * changed the hotkey for 'repeat recruit' from 'ctrl+shift+r' to
     'ctrl+alt+r' since shift toggles accelerated mode and produced an
     animation glitch with this hotkey; this needs to be considered for
     future hotkey changes/additions (see bug #6312)
   * when discovering friendly units, the message is now blue
 * WML engine
   * add hide_help key to prevent some unit to be display in help menu
   * allow_new_game key (default=yes) to prevent [multiplayer] scenarios to
     show up in the multiplayer game creation interface (FR #6397)
   * new [set_specials] tag to allow custom special in effect tags
   * new remove_specials=<id_list> key to allow to remove specials in effect
     tags
   * obsolete set_special= in [effect] tags