@@ -1,4 +1,6 @@
 Version 1.3-svn:
+* editor
+   * allow map load/write from/to scenario file
  * campaigns
    * Heir to the Throne
      * removed Mountain Pass and Valley of Statues from the repository
